# autonomous-glider

./: .clang-format  CMakeLists.txt  README.md
icm20948/: CMakeLists.txt  icm20948-register.h  icm20948.c  icm20948.h
icm20948-official/: CMakeLists.txt  ICM_20948.cpp  ICM_20948.h  ICM_20948_C.h  icm20948.cpp  icm20948.h
src/: Math.cpp  bmp280.c  bmp280.h  bmp280_defs.h  bmp280_low_level.c  bmp280_low_level.h  glider.cpp  icm20948.cpp  icm20948.h  main.cpp  main.h  merwe_scaled_sigma_generator.cpp  merwe_scaled_sigma_generator.h  pid.cpp  pid.h  pwmservo.cpp  pwmservo.h  spherical_conversions.cpp  spherical_conversions.h  sr_ukf.cpp  sr_ukf.h
